[gd_scene load_steps=3 format=3 uid="uid://1lqlbp5gk61q"]

[ext_resource type="Script" path="res://ui/pause.gd" id="1_g2e1l"]
[ext_resource type="FontFile" uid="uid://b7u7rptev1prg" path="res://assets/ui/FutilePro.ttf" id="4_k62ao"]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g2e1l")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.12549)

[node name="Options" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -381.0
offset_top = -144.0
offset_right = 381.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_k62ao")
theme_override_font_sizes/font_size = 64
text = "Game Paused"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="Options"]
layout_mode = 2
offset_left = 470.0
offset_top = 280.0
offset_right = 670.0
offset_bottom = 380.0
theme_override_fonts/font = ExtResource("4_k62ao")
theme_override_font_sizes/font_size = 36
text = "Resume"

[node name="Quit" type="Button" parent="Options"]
layout_mode = 2
offset_left = 470.0
offset_top = 410.0
offset_right = 670.0
offset_bottom = 510.0
theme_override_fonts/font = ExtResource("4_k62ao")
theme_override_font_sizes/font_size = 36
text = "Quit"

[node name="Confirm" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Confirm"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -381.0
offset_top = -144.0
offset_right = 381.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_k62ao")
theme_override_font_sizes/font_size = 64
text = "Are you sure?"
horizontal_alignment = 1

[node name="Yes" type="Button" parent="Confirm"]
layout_mode = 0
offset_left = 470.0
offset_top = 280.0
offset_right = 670.0
offset_bottom = 380.0
theme_override_fonts/font = ExtResource("4_k62ao")
theme_override_font_sizes/font_size = 36
text = "Yes"

[node name="No" type="Button" parent="Confirm"]
layout_mode = 0
offset_left = 470.0
offset_top = 410.0
offset_right = 670.0
offset_bottom = 510.0
theme_override_fonts/font = ExtResource("4_k62ao")
theme_override_font_sizes/font_size = 36
text = "No"

[connection signal="pressed" from="Options/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Confirm/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="Confirm/No" to="." method="_on_no_pressed"]
